GNOME Bugzilla – Bug 790695
operations/common/exp-combine: Plug leaks in error path
Last modified: 2017-11-24 15:42:27 UTC
Ell spotted some more leaks while discussing bug 790675.
Created attachment 364167 [details] [review] operations/common/exp-combine: Plug leaks in error path
Created attachment 364168 [details] [review] operations/common/exp-combine: Simplify code
From #gegl on GIMPNet: 15:04 <rishi> pippin: Ell: Does this look OK: https://bugzilla.gnome.org/show_bug.cgi?id=790695 ? Hacked up in hurry with sleepy eyes, so please double check. 15:23 <Ell> rishi: yep, looks good :) commit c817c5fab306cec7235324ad07931ccf539a7ad1 Author: Debarshi Ray <debarshir@gnome.org> Date: Wed Nov 22 08:15:20 2017 +0100 operations/common/exp-combine: Simplify code https://bugzilla.gnome.org/show_bug.cgi?id=790695 commit 5dc18853ba8999a66b6d11fe9227fb6c341c0c84 Author: Debarshi Ray <debarshir@gnome.org> Date: Wed Nov 22 08:06:19 2017 +0100 operations/common/exp-combine: Plug leaks in error path Spotted by Ell. https://bugzilla.gnome.org/show_bug.cgi?id=790695