operations/common/exp-combine: Plug leaks in error path

Spotted by Ell.

https://bugzilla.gnome.org/show_bug.cgi?id=790695